Bug 73568 	Refactor the code for the system information panel in the home page. 	When the text of some value is too long, the table will be extended automatically. When it exceeds the width of panel, a scrollbar will be shown. Also, the value of one label will be close to label cell.
http://bugzilla.zimbra.com/show_bug.cgi?id=73568

--- a/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
@@ -1061,7 +1061,9 @@ TD.gridGroupBodyLabel {
 	padding:12px;
 }
 
-
+.ZaHomePanelPage {
+    vertical-align: top;
+}
 
 .ZaHomeTabView .xform_label {
 	text-align:left;
